--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
   },
   "devDependencies": {
     "firebase": "^9.6.10",
+    "react-firebase-hooks": "^5.0.3",
+    "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "6",
     "styled-components": "^5.3.5"
